sandbox/output
TicketDispenserTest.java:10: error: constructor TicketDispenser in class TicketDispenser cannot be applied to given types;
        TicketDispenser dispenser = new TicketDispenser();
                                    ^
  required: TurnNumberSequence
  found: no arguments
  reason: actual and formal argument lists differ in length
TicketDispenserTest.java:23: error: constructor TicketDispenser in class TicketDispenser cannot be applied to given types;
        TicketDispenser anotherDispenser = new TicketDispenser();
                                           ^
  required: TurnNumberSequence
  found: no arguments
  reason: actual and formal argument lists differ in length
TicketDispenserTest.java:24: error: constructor TicketDispenser in class TicketDispenser cannot be applied to given types;
        TicketDispenser dispenser = new TicketDispenser();
                                    ^
  required: TurnNumberSequence
  found: no arguments
  reason: actual and formal argument lists differ in length
TicketDispenserTest.java:43: error: constructor TicketDispenser in class TicketDispenser cannot be applied to given types;
        TicketDispenser dispenser = new TicketDispenser();
                                    ^
  required: TurnNumberSequence
  found: no arguments
  reason: actual and formal argument lists differ in length
TicketDispenserTest.java:53: error: incompatible types: MockTurnNumberSequence cannot be converted to TurnNumberSequence
        TicketDispenser dispenser = new TicketDispenser(mockTurnNumberSequence);
                                                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
5 errors
